# fingerprint-attendance

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  attendance.db  build.rs  fingerprint.ino
assets/: index.html  new-student.html
migrations/: 20231104084432_initial-setup.sql
src/: main.rs  models.rs  server.rs
src/port/: error.rs  mod.rs
